Fixed spacing of portfolio cards

--- a/styles.css
+++ b/styles.css
@@ -1,236 +1,13 @@
-html {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
-body {
-  background: #444;
-  margin: 0;
-  color: #f2ede4;
-}
-
-header {
-  background: #d9d1c7;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  height: 88px;
-  box-shadow: 0 0px 3px 0px black;
-  Color: #444;
-}
-
-main {
-  margin: auto;
-  margin-top: 44px;
-  max-width: 960px;
-  background: #8c8681;
-}
-
-.topper {
-  display: flex;
-  max-width: 960px;
-  margin: auto;
-  height: inherit;
-}
-
-nav {
-  flex: 1 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  align-items: center;
-  height: inherit;
-}
-
-hr {
-  background-color: #444;
-  border: none;
-  height: 2px;
-  border-radius: 2px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: oswald;
-}
-
-h2 {
-  font-size: 3em;
-  line-height: 2em;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-  font-family: oswald;
-  color: inherit;
-  font-size: 1.5em;
-  line-height: 1.5em;
-}
-
-a:hover {
-  color: #901808;
-}
-
-nav a {
-  height: inherit;
-  padding: 0 22px;
-  line-height: 88px;
-  flex-shrink: 1;
-}
-
-nav a:last-child {
-  color: #901808;
-}
-
-nav a:last-child:hover {
-  background: #901808;
-  color: #d9d1c7;
-}
-
-.logo {
-  height: 88px;
-  padding-left: 22px;
-  flex-shrink: 1;
-}
-
-.hero {
-  padding: 11px;
-  padding-top: 88px;
-  display: flex;
-  flex-wrap: wrap;
-  align-content: space-between;
-  align-items: center;
-}
-
-.hero img {
-  border-radius: 50%;
-  margin: auto;
-  padding-left: 44px;
-  min-width: 20%;
-  flex: 1 1 25%;
-  max-width: 50%;
-}
-
-.hero div {
-  flex: 1 0 66%;
-  font-size: 1.5em;
-  line-height: 1.5em;
-  text-align: right;
-  padding: 0 11px;
-}
-
-.portfolio {
-  background: #f2ede4;
-  padding: 88px 22px 44px 22px;
-  text-align: center;
-  Color: #444;
-}
-
-.portfolio-flex {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  align-content: center;
-  justify-content: space-around;
-}
-
-.portfolio-item {
-  flex-basis: 290px;
-  margin: 5px;
-}
-
-.portfolio-img {
-  width: 280px;
-  border-radius: 22px;
-  border: 5px #444 solid;
-}
-
-.contact {
-  text-align: center;
-  padding: 44px 22px 110px 22px;
-}
-
-.contact-flex {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap-reverse;
-  align-content: center;
-}
-
-.contact-form {
-  text-align: right;
-  flex: 1 1 300px;
-  padding-right: 22px;
-  padding-bottom: 22px;
-}
-
-input {
-  background: none;
-  border: none;
-  border-bottom: 1px #f2ede4 solid;
-  color: #f2ede4;
-  font-size: 1.5em;
-  line-height: 1.5em;
+.banner {
   margin-bottom: 22px;
-  width: 90%;
+  }
+
+  .hero {
+  padding-top: 111px;
+  padding-bottom: 66px;
   text-align: right;
-  font-family: Oswald;
 }
 
-label {
-  font-size: 1.5em;
-}
-
-button {
-  background: #f2ede4;
-  border: 1px #f2ede4 solid;
-  border-radius: 4px;
-  width: 90%;
-  font-family: oswald;
-  font-size: 1.5em;
-  padding: 8px;
-  color: #901808;
-}
-
-button:hover {
-  background-color: #901808;
-  color: #f2ede4;
-}
-
-.cta {
-  text-align: left;
-  flex: 1 1 300px;
-  padding-left: 22px;
-  padding-bottom: 22px;
-}
-
-.cta-line {
-  border-bottom: 1px #f2ede4 solid;
-  width: 90%;
-  margin-bottom: 24px;
-}
-
-footer {
-  background: #d9d1c7;
-  width: 100%;
-  height: 88px;
-  color: #444;
-  position: fixed;
-  bottom: 0px;
-  box-shadow: 0 0px 3px 0px black;
-}
-
-.footer-flex {
-  max-width: 960px;
-  margin: auto;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-  height: inherit;
+.hero__img {
+  border-radius: 50%;
 }
